--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: Dana;
+  src: url('./fonts/dana/Dana-Regular.ttf');
+  src: url('./fonts/dana/Dana-Regular.ttf?#iefix') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: Dana;
+  src: url('./fonts/dana/Dana-Bold.ttf');
+  src: url('./fonts/dana/Dana-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: Dana;
+  src: url('./fonts/dana/Dana-Light.ttf');
+  src: url('./fonts/dana/Dana-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: Dana;
+  src: url('./fonts/dana/Dana-Medium.ttf');
+  src: url('./fonts/dana/Dana-Medium.ttf') format('truetype');
+  font-weight: medium;
+  font-style: normal;
+}
